multicolumn rendering: elements with `min-height` break inside despite `break-insise: avoid`
Categories
(Core :: Layout, defect)
Tracking
()
People
(Reporter: gunnar, Assigned: MatsPalmgren_bugz)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:88.0) Gecko/20100101 Firefox/88.0
Steps to reproduce:
https://codepen.io/gunnarbittersmann/pen/rNyMJdv
container element with columns: 3
child elements with with break-insise: avoid and min-height
Actual results:
Element may break inside; following element not aligned to the top
Expected results:
Elements must not break inside
Comment 1•5 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Layout' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.
Comment 2•5 years ago
|
||
Regression window:
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=35af0b925215124a619bc054aeeb8d01e99b4e63&tochange=e928d60013446484acd63757ac883626b722f85d
Suspect: Bug 1602430
Comment 3•5 years ago
|
||
Nice, thanks for finding the regression range so quickly :)
Updated•5 years ago
|
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 5•5 years ago
|
||
| Assignee | ||
Comment 6•5 years ago
|
||
Comment 9•5 years ago
|
||
| bugherder | ||
Description
•