Bug 1711630 - Honor 'break-inside: avoid' also when 'min-block-size' causes the overflow.  r=TYLin

Differential Revision: https://phabricator.services.mozilla.com/D115604